--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </ul>
             </nav>
             <div class="content">
-                <h2>Malwares Are Vast</h2>
+                <h2>Malware Are Vast</h2>
             </div>
         </div>
     </div>
