--- a/index.html
+++ b/index.html
@@ -7,21 +7,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landingpage</title>
     <link rel="stylesheet" href="landing.css">
+    <link rel="stylesheet" href="./fontawesome-free-6.4.0-web/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 </head>
 <body>
+
     <div class="container">
-        <div class="row">
+        <div class=" row">
             <nav class="navbar">
                 <h1>DOWNLOAD INSPECTOR</h1>
-                <ul>
+                <ul id="sidemenu">
                     <a href="#home" class="active"></i>Home</a>
                     <a href="#About Us" class="active"></i>About Us</a>
                     <a href="data.html" class="active"></i>Data-Input</a>
+                    <i class="fas fa-times" onclick="closemenu()"></i>
                 </ul>
+                <i class="fas fa-bars" onclick="openmenu()"></i>
             </nav>
             <div class="content">
-                <h2>Malware Are Vast</h2>
+                <h2>Malwares Are Vast</h2>
             </div>
         </div>
     </div>
@@ -29,7 +33,7 @@
     <section class="About-content"  id="About Us">
         <div class="content2">
             <h2>About Us</h2>
-            <p class="typed">The Download Inspector  project is a web browser extension/application that intercepts<br> download requests from the browser and checks the requested files for malicious software using<br> an API and database. The goal of the Minimum Viable Product (MVP) is to provide basic <br>functionality for users to safely download files without worrying about potential malware infections.</p>
+            <p class="typed">The Download Inspector  project is a web <br>browser extension/application that intercepts download requests <br>from the browser and checks the requested files for<br> malicious software using an API and database.<br> The goal of the Minimum Viable Product (MVP) is to provide<br> basic functionality for users to safely download files<br> without worrying about potential malware infections.</p>
         </div>
         <!-- <div class="inspiration">
             <h2>Inpiration</h2>
@@ -40,21 +44,22 @@
     <section class="inspi">
         <div class="inspiration">
             <h2>Inspiration</h2>
-            <p>This project was inspired by a problem many people face when browsing the internet.<br> There are often misleading links that pretend to be download links, but <br>they can actually be dangerous and put your personal information at risk. We  addressed this<br> issue by creating a tool called the "Download Inspector." Instead of having to open a <br>separate application to check a link's safety, we made it a browser extension<br> for convenience. This means you can easily use it while browsing<br> any tab without the need for extra steps.</p>
+            <p>This project was inspired by a problem many people face when browsing <br>the internet. There are often misleading links that pretend to be download links, but <br>they can actually be dangerous and put your personal information at risk. We  addressed this<br> issue by creating a tool called the "Download Inspector." Instead of having to open a <br>separate application to check a link's safety, we made it a browser extension<br> for convenience. This means you can easily use it while browsing<br> any tab without the need for extra steps.</p>
         </div>
         <div class="members">
             <div class="github">
                 <h3>Team Members</h3>
-                <a href="https://github.com/OnyeEbube">Princess Okonta</a>
+                <a href="https://github.com/OnyeEbube">Princess Okonta</a><br>
                  <a href="https://github.com/johnajiboy">John Ajiboy</a>
             </div>     
         
              <div class="linkedin">
-                <a href="https://www.linkedin.com/in/john-ajiboye/">https://www.linkedin.com/in/john-ajiboye/</a>
+                <a href="https://www.linkedin.com/in/john-ajiboye/">https://www.linkedin.com/in/john-ajiboye/</a><br>
                 <a href="https://www.linkedin.com/in/onyekaokontaprincess/">https://www.linkedin.com/in/onyekaokontaprincess/</a>
             </div>
 
         </div>    
      </section>
+     <script src="landing.js"></script>
 </body>
 </html>
